fix for sass port, whenever compilator sees for example '0 -$variable' it will do math, before displaying variable's value. To prevent that behaviour, some of the variables should be wrapped with parentheses like this: 'margin: 0 (-$dropdown-padding);

--- a/src/less/core/dropdown.less
+++ b/src/less/core/dropdown.less
@@ -131,7 +131,7 @@
 /* Nav in dropdown
  ========================================================================== */
 
-.uk-dropdown .uk-nav { margin: 0 -@dropdown-padding; }
+.uk-dropdown .uk-nav { margin: 0 (-@dropdown-padding); }
 
 
 /* Grid and panel in dropdown
@@ -230,7 +230,7 @@
  * Nav in dropdown
  */
 
-.uk-dropdown-small .uk-nav { margin: 0 -@dropdown-small-padding; }
+.uk-dropdown-small .uk-nav { margin: 0 (-@dropdown-small-padding); }
 
 
 /* Modifier: `uk-dropdown-navbar`
