--- a/src/less/core/grid.less
+++ b/src/less/core/grid.less
@@ -76,7 +76,7 @@
 
 .uk-grid {
     /* 1 */
-    margin: 0 0 0 -@grid-gutter-horizontal;
+    margin: 0 0 0 (-@grid-gutter-horizontal);
     /* 2 */
     padding: 0;
     list-style: none;
